--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 ﻿<meta charset='utf-8'>
-<meta http-equiv="X-UA-Compatible" content="chrome=1">
-<link rel="stylesheet" type="text/css" media="all" href="res/all.css">
+<meta name="description" content="Brandt Redd is an expert in applying Information Technology to support personalized learning, discovery, and research." />
+<meta http-equiv="X-UA-Compatible" content="chrome=1" />
+<link rel="stylesheet" type="text/css" media="all" href="res/all.css" />
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
