--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,12 @@
 ﻿<footer>
     <!-- <div style="text-align:center;">Copyright and license (e.g. Creative Commons) go here.</div> -->
-    <!-- Google Analytics Belongs here -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50235635-3"></script>
+    <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-50235635-3');
+    </script>
+
 </footer>
