Update Styles and Metadata

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,19 +2,22 @@
 <html>
 
 <head>
-    <title>{{ page.title }}</title>
-    {% include head.html %}
+<title>{{ page.title }}</title>
+{% include head.html %}
 </head>
 
 <body>
 
-<div id="main">
-    {% include header.html %}
-	<article>
-		{{ content }}
-	</article>
-	{% include footer.html %}
-</div>
+    <div id="frame">
+        {% include header.html %}
+        <main>
+            <article>
+                {{ content }}
+            </article>
+        </main>
+        {% include footer.html %}
+    </div>
 
 </body>
+
 </html>
