--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,16 @@
 ﻿<meta charset='utf-8'>
 <meta name="description" content="Brandt Redd is an expert in applying Information Technology to support personalized learning, discovery, and research." />
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="article" />
+<meta property="og:title" content="Brandt Redd" />
+<meta property="og:description" content="Brandt Redd is an expert in applying Information Technology to support personalized learning, discovery, and research." />
+<meta property="og:image" content="https://brandtredd.org/Brandt_Redd.jpg" />
+<meta property="og:site_name" content="Brandt Redd" />
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@BrandtRedd" />
+<meta name="twitter:image" content="https://brandtredd.org/res/Br.png" />
 <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-<link rel="stylesheet" type="text/css" media="all" href="res/all.css" />
+<link rel="stylesheet" type="text/css" media="all" href="res/BrandtRedd.css" />
 <link rel="icon" type="image/png" href="res/Br.png">
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
