--- a/res/BrandtRedd.css
+++ b/res/BrandtRedd.css
@@ -1,4 +1,15 @@
-﻿/* Fonts */
+﻿/* ==== Declare Constants ==== */
+:root {
+    --clr_accent1: #8A1515; /* Directory, Subtitle, Heading 1 (burgundy) */
+    --clr_accent2: #085170; /* Title, Heading 2 (dark turquoise)*/
+    --clr_link: #18577e; /* (blue) */
+    --clr_link_visited: #278DCC;
+    --clr_link_hover_bg: #D0D0D0; /* (medium-light gray) */
+    --clr_code_bg: #E8E8E8; /* (light gray) */
+    --gradient_hr: linear-gradient(to right, white, #808080, #808080, white);
+}
+
+/* ==== Import Fonts ==== */
 @font-face {
     font-family: 'Open Sans';
     font-style: italic;
@@ -48,11 +59,11 @@
     src: local('Open Sans ExtraBold'), local('OpenSans-ExtraBold'), url(https://fonts.gstatic.com/s/opensans/v15/mem5YaGs126MiZpBA-UN8rsOUuhp.woff2) format('woff2');
 }
 
-
-/* ===== Reset everything ===== */
+/* ==== CSS Reset ==== */
 * {
     box-sizing: border-box;
 }
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -61,31 +72,31 @@ small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, 
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+table, caption, tbody, tfoot, thead, tr, th,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-	display:block;
+    display: block;
 }
 
 /* Images */
 img {
-    border-style:none;
+    border-style: none;
 }
 
-/* ===== Body Defaults ===== */
+/* ==== Body Defaults ==== */
 body {
     margin: 0;
     color: black;
@@ -97,7 +108,7 @@ body {
 /* All other font sizes should be relative to the base (e.g. 1.5em or 150%) */
 
 /* Main frame for pages - should sit just inside body */
-#main {
+#frame {
     max-width: 55em;
     margin: 5px auto;
     padding: 5px;
@@ -121,7 +132,7 @@ header::after {
     clear: both;
     display: table;
     /* Border rule */
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0));
+    background-image: var(--gradient_hr);
     height: 2px;
     width: 100%;
     margin-top: 1em;
@@ -164,8 +175,8 @@ div.siteblock {
     text-decoration: inherit;
 }
 .siteblock a:hover {
-    background-color: #D0D0D0;
-    color:inherit;
+    background-color: var(--clr_link_hover_bg);
+    color: inherit;
     text-decoration: inherit;
 }
 .siteblock a:visited {
@@ -173,7 +184,7 @@ div.siteblock {
     text-decoration: inherit;
 }
 
-/* ===== Main Menu ===== */
+/* ==== Main Menu ==== */
 
 /* menu should be a div that frames up the main menu */
 div.menu {
@@ -187,14 +198,14 @@ div.menu {
     padding: 0;
 }
 .menu li {
-    color: #8A1515;
+    color: var(--clr_accent1);
 }
 .menu li a {
     color: inherit;
     text-decoration: inherit;
 }
 .menu li a:hover {
-    background-color: #D0D0D0;
+    background-color: var(--clr_link_hover_bg);
     color: inherit;
     text-decoration: inherit;
 }
@@ -203,14 +214,15 @@ div.menu {
     text-decoration: inherit;
 }
 
-/* ===== Footer ===== */
+/* ==== Footer ==== */
 footer {
+    text-align: center;
 }
 footer::before {
     /* Border rule */
     content: "";
     display: table;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0));
+    background-image: var(--gradient_hr);
     height: 2px;
     width: 100%;
     margin-top: 0.5em;
@@ -223,7 +235,12 @@ footer::after {
     display: table;
 }
 
-/* ===== General text formatting ===== */
+/* ==== Main Section - where articles appear */
+main {
+    /* Nothing here - inherits setup from the frame. */
+}
+
+/* ==== General text formatting ==== */
 
 /* Core document/content. Comes after the header and before the footer. */
 article {
@@ -236,23 +253,23 @@ p {
 }
 
 ul {
-    list-style:disc;
-    margin-left:3em;
+    list-style: disc;
+    margin-left: 3em;
     margin-bottom: 1em;
 }
 
 ol {
-    list-style:decimal;
-    margin-left:3em;
+    list-style: decimal;
+    margin-left: 3em;
     margin-bottom: 1em;
 }
 
 em, i {
-	font-style:italic;
+    font-style: italic;
 }
 
 strong, b {
-    font-weight:bold;
+    font-weight: bold;
 }
 
 blockquote {
@@ -268,13 +285,13 @@ q {
 /* Links */
 a {
     text-decoration: underline;
-    color: #18577e;
+    color: var(--clr_link);
 }
 a:hover {
-    background-color: #D0D0D0;
+    background-color: var(--clr_link_hover_bg);
 }
-a:visited, a.linkvisited {
-    color: #278DCC;
+a:visited, .linkvisited {
+    color: var(--clr_link_visited);
 }
 
 /* Page or document Title */
@@ -282,7 +299,7 @@ a:visited, a.linkvisited {
     text-align: center;
     font-size: 1.6em;
     font-weight: bold;
-    color: #085170;
+    color: var(--clr_accent2);
     margin-top: 0.5em;
     margin-bottom: 0.5em;
     line-height: 1;
@@ -292,7 +309,7 @@ a:visited, a.linkvisited {
     text-align: center;
     font-weight: bold;
     font-size: 1.2em;
-    color: #8A1515;
+    color: var(--clr_accent1);
     margin-top: 0;
     margin-bottom: 0.5em;
     line-height: 1;
@@ -302,118 +319,121 @@ a:visited, a.linkvisited {
 h1 {
     font-size: 2.0em;
     font-weight: normal;
-    color: #8A1515;
-    margin-top: 1em;
+    color: var(--clr_accent1);
+    margin-top: 0.5em;
     margin-bottom: 0.2em;
 }
 
 h2 {
     font-size: 1.5em;
     font-weight: bold;
-    color: #085170;
-    margin-top: 0.8em;
+    color: var(--clr_accent2);
+    margin-top: 0.5em;
     margin-bottom: 0.2em;
 }
 
-h3
-{
-	font-size:1.1em;
-	font-weight:bold;
-	color:black;
+h3 {
+    font-size: 1.2em;
+    font-weight: bold;
+    color: var(--clr_accent2);
+    margin-top: 0.2em;
 }
 
-h4
-{
-	font-size:1.1em;
-	font-style:italic;
-	color:#63666A;
+h4 {
+    font-size: 1.2em;
+    font-weight: bold;
+    font-style: italic;
+    color: black;
+    margin-top: 0.2em;
 }
 
-h5,
-h6
-{
-	font-size:1.1em;
-	color:#63666A;
+h5 {
+    font-size: 1.1em;
+    font-weight: bold;
+    text-decoration: underline;
+    color: black;
+    margin-top: 0.2em;
+}
+
+h6 {
+    font-size: 1.1em;
+    font-weight: bold;
+    text-decoration: none;
+    color: black;
+    margin-top: 0.2em;
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a,
-h1 a:link, h2 a:link, h3 a:link, h4 a:link, h5 a:link, h6 h:link,
-h1 a:visited, h2 a:visited, h3 a:visited, h4 a:visited, h5 a:visited, h6 h:visited
-{
-	color:inherit;
-	text-decoration:inherit;
+h1 a:link, h2 a:link, h3 a:link, h4 a:link, h5 a:link, h6 a:link,
+h1 a:visited, h2 a:visited, h3 a:visited, h4 a:visited, h5 a:visited, h6 h:visited {
+    color: inherit;
+    text-decoration: inherit;
 }
 
-h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h5 a:hover
-{
-	color:#00B5E2;
-	text-decoration:underline;
+h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h5 a:hover, h6 a:hover {
+    color: var(--clr_link);
+    text-decoration: underline;
 }
 
 /* horizontal rule */
 hr {
     border: 0;
     height: 2px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0));
+    background-image: var(--gradient_hr);
     width: 100%;
 }
 
 /* code blocks */
 code {
-	font: 0.9em "Lucida Console", Monaco, monospace;
-	color: black;
-	background-color: #E8E8E8;
-	padding: 0 3px 0 3px;
+    font: 0.9em "Lucida Console", Monaco, monospace;
+    color: black;
+    background-color: var(--clr_code_bg);
+    padding: 0 3px 0 3px;
 }
 
 pre {
-	font: 0.9em "Lucida Console", Monaco, monospace;
-	color: black;
-	background-color: #E8E8E8;
-	padding: 8px;
-    border-width:1px;
-    border-style:ridge;
-    border-radius:5px;
-    border-color:black;
+    font: 0.9em "Lucida Console", Monaco, monospace;
+    color: black;
+    background-color: var(--clr_code_bg);
+    padding: 8px;
+    border-width: 1px;
+    border-style: ridge;
+    border-radius: 5px;
+    border-color: black;
     margin-bottom: 1em;
 }
 
 pre code {
-	font: inherit;
-	color: inherit;
-	background-color: inherit;
-	padding: 0;
+    font: inherit;
+    color: inherit;
+    background-color: inherit;
+    padding: 0;
 }
 
 /* Tables */
-table
-{
-	border-collapse: collapse;
-	border-spacing: 0;
-	margin: 0 0 1em 0;
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    margin: 0 0 1em 0;
 }
 
-table th
-{
-  font-weight: bold;
+table th {
+    font-weight: bold;
 }
 
-table th, table td
-{
-  border: 1px solid black;
-  padding: 6px 13px;
+table th, table td {
+    border: 1px solid black;
+    padding: 6px 13px;
 }
 
 /* Layout Tables (have no borders, padding, or margins) */
-table.layout
-{
-	margin: 0;
+table.layout {
+    margin: 0;
 }
 
-table.layout th, table.layout td
-{
-	border: 0px none white;
-	padding: 0;	
+table.layout th, table.layout td {
+    border: 0 none white;
+    padding: 0;
 }
 
 /* === Special Icon List Just for BrandtRedd.org === */
