--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,8 @@
 <meta name="twitter:site" content="@BrandtRedd" />
 <meta name="twitter:image" content="https://brandtredd.org/res/Br.png" />
 <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-<link rel="stylesheet" type="text/css" media="all" href="res/BrandtRedd.css" />
-<link rel="icon" type="image/png" href="res/Br.png">
+<link rel="stylesheet" type="text/css" media="all" href="/res/BrandtRedd.css" />
+<link rel="icon" type="image/png" href="/res/Br.png">
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
