Update layout for auxiliary pages.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
     <!-- logo -->
     <div class="siteblock">
-        <h1>Brandt Redd</h1>
+        <h1><a href="/">Brandt Redd</a></h1>
         <!-- <h2>No subtitle</h2> -->
     </div>
 
