Custom Social Metadata for Calendar

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,10 @@
 ﻿<meta charset='utf-8'>
-<meta name="description" content="Brandt Redd is an expert in applying Information Technology to support personalized learning, discovery, and research." />
+<meta name="description" content="{{ page.description | default: "Brandt Redd is an expert in applying Information Technology to support personalized learning, discovery, and research." }}" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="Brandt Redd" />
-<meta property="og:description" content="Brandt Redd is an expert in applying Information Technology to support personalized learning, discovery, and research." />
-<meta property="og:image" content="https://brandtredd.org/Brandt_Redd.jpg" />
+<meta property="og:title" content="{{ page.title | default: "Brandt Redd" }}" />
+<meta property="og:description" content="{{ page.description | default: "Brandt Redd is an expert in applying Information Technology to support personalized learning, discovery, and research." }}" />
+<meta property="og:image" content="{{ page.og_image | default: "https://brandtredd.org/Brandt_Redd.jpg" }}" />
 <meta property="og:site_name" content="Brandt Redd" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@BrandtRedd" />
