--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,7 @@
 ﻿<footer>
-    <!-- <div style="text-align:center;">Copyright and license (e.g. Creative Commons) go here.</div> -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50235635-3"></script>
-    <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-50235635-3');
-    </script>
-
+  <!-- <div style="text-align:center;">Copyright and license (e.g. Creative Commons) go here.</div> -->
+  <script>
+    // Privacy-sensitive page view counter
+    fetch("https://pageviewcounter.dicax.org/rpv?url=" + encodeURIComponent(window.location.href));
+  </script>
 </footer>
