--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 <meta property="og:type" content="article" />
 <meta property="og:title" content="{{ page.title | default: "Brandt Redd" }}" />
 <meta property="og:description" content="{{ page.description | default: "Brandt Redd is an expert in applying Information Technology to support personalized learning, discovery, and research." }}" />
-<meta property="og:image" content="{{ page.og_image | default: "https://brandtredd.org/Brandt_Redd.jpg" }}" />
+<meta property="og:image" content="{{ page.og_image | default: "https://brandtredd.org/Brandt_Redd2.jpg" }}" />
 <meta property="og:site_name" content="Brandt Redd" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@BrandtRedd" />
